don't change anything

--- a/self_supervised/train_model_SL.ipynb
+++ b/self_supervised/train_model_SL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
     "                params = params.to(device)\n",
     "                optimizer.zero_grad()\n",
     "                logits = model(inputs)  # shape: (B, N_obs*4*H)\n",
-    "                loss = loss_fn(logits, y_true) + self.batch_constraint_violation_loss(logits, params, lambda_penalty=penalty_weight)\n",
+    "                loss = self.batch_constraint_violation_loss(logits, params, lambda_penalty=penalty_weight) # + loss_fn(logits, y_true)\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,9 +532,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Iter 1000] Validation loss: 0.4758 | Validation accuracy (bitwise): 0.9185 | Constraint violation: 0.7766\n",
+      "[Iter 2000] Validation loss: 0.4534 | Validation accuracy (bitwise): 0.9682 | Constraint violation: 0.1760\n",
+      "[Iter 3000] Validation loss: 0.4510 | Validation accuracy (bitwise): 0.9723 | Constraint violation: 0.0895\n",
+      "[Iter 4000] Validation loss: 0.4518 | Validation accuracy (bitwise): 0.9726 | Constraint violation: 0.1264\n",
+      "[Iter 5000] Validation loss: 0.4509 | Validation accuracy (bitwise): 0.9735 | Constraint violation: 0.0966\n",
+      "[Iter 6000] Validation loss: 0.4508 | Validation accuracy (bitwise): 0.9722 | Constraint violation: 0.0790\n",
+      "[Iter 7000] Validation loss: 0.4521 | Validation accuracy (bitwise): 0.9688 | Constraint violation: 0.0834\n",
+      "[Iter 8000] Validation loss: 0.4511 | Validation accuracy (bitwise): 0.9723 | Constraint violation: 0.0823\n",
+      "[Iter 9000] Validation loss: 0.4510 | Validation accuracy (bitwise): 0.9728 | Constraint violation: 0.0966\n",
+      "[Iter 10000] Validation loss: 0.4511 | Validation accuracy (bitwise): 0.9718 | Constraint violation: 0.0874\n",
+      "[Iter 10000] Saved model at /home/vietanhle/github/UPenn_Py/SS_Learning_MIQP/self_supervised/regression_20250930_1509.pt\n",
+      "[Iter 11000] Validation loss: 0.4493 | Validation accuracy (bitwise): 0.9768 | Constraint violation: 0.0822\n",
+      "[Iter 12000] Validation loss: 0.4498 | Validation accuracy (bitwise): 0.9759 | Constraint violation: 0.1048\n",
+      "[Iter 13000] Validation loss: 0.4503 | Validation accuracy (bitwise): 0.9734 | Constraint violation: 0.0643\n",
+      "[Iter 14000] Validation loss: 0.4503 | Validation accuracy (bitwise): 0.9755 | Constraint violation: 0.0952\n",
+      "[Iter 15000] Validation loss: 0.4501 | Validation accuracy (bitwise): 0.9750 | Constraint violation: 0.0830\n",
+      "[Iter 16000] Validation loss: 0.4511 | Validation accuracy (bitwise): 0.9727 | Constraint violation: 0.1075\n",
+      "[Iter 17000] Validation loss: 0.4508 | Validation accuracy (bitwise): 0.9728 | Constraint violation: 0.0825\n",
+      "[Iter 18000] Validation loss: 0.4511 | Validation accuracy (bitwise): 0.9713 | Constraint violation: 0.0787\n",
+      "[Iter 19000] Validation loss: 0.4495 | Validation accuracy (bitwise): 0.9760 | Constraint violation: 0.0813\n",
+      "[Iter 20000] Validation loss: 0.4490 | Validation accuracy (bitwise): 0.9775 | Constraint violation: 0.0746\n",
+      "[Iter 20000] Saved model at /home/vietanhle/github/UPenn_Py/SS_Learning_MIQP/self_supervised/regression_20250930_1509.pt\n",
+      "[Iter 21000] Validation loss: 0.4498 | Validation accuracy (bitwise): 0.9764 | Constraint violation: 0.0934\n",
+      "Early stopping: no improvement for 10 epoches\n",
+      "Final model saved at /home/vietanhle/github/UPenn_Py/SS_Learning_MIQP/self_supervised/regression_20250930_1509.pt\n"
+     ]
+    }
+   ],
    "source": [
     "FFNet_reg.setup_network(depth=4, neurons=1024)\n",
     "FFNet_reg.model\n",
@@ -561,14 +593,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading presaved Hetero GNN classifier model from regression_20250718_1654.pt\n",
+      "Loading presaved Hetero GNN classifier model from regression_20250930_1401.pt\n",
       "FFNet(\n",
       "  (activation): ReLU()\n",
       "  (layers): ModuleList(\n",
@@ -581,7 +613,7 @@
     }
    ],
    "source": [
-    "fn_saved = 'regression_20250718_1654.pt' \n",
+    "fn_saved = 'regression_20250930_1401.pt' \n",
     "FFNet_reg.setup_network(depth=4, neurons=1024)\n",
     "FFNet_reg.load_network(fn_saved)\n",
     "print(FFNet_reg.model)"
@@ -589,18 +621,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Iter 100] Validation loss: 16.2816 | Validation accuracy (bitwise): 0.6893 | Constraint violation: 1.5725\n",
-      "[Iter 200] Validation loss: 3.8188 | Validation accuracy (bitwise): 0.7488 | Constraint violation: 0.3285\n",
-      "[Iter 300] Validation loss: 8.2950 | Validation accuracy (bitwise): 0.7219 | Constraint violation: 0.7751\n",
-      "[Iter 400] Validation loss: 7.7886 | Validation accuracy (bitwise): 0.7165 | Constraint violation: 0.7242\n",
-      "[Iter 500] Validation loss: 8.1592 | Validation accuracy (bitwise): 0.7159 | Constraint violation: 0.7613\n"
+      "[Iter 100] Validation loss: 1281.8120 | Validation accuracy (bitwise): 0.7131 | Constraint violation: 1.2813\n",
+      "[Iter 200] Validation loss: 760.8011 | Validation accuracy (bitwise): 0.7329 | Constraint violation: 0.7603\n",
+      "[Iter 300] Validation loss: 328.2528 | Validation accuracy (bitwise): 0.7457 | Constraint violation: 0.3277\n",
+      "[Iter 400] Validation loss: 446.6051 | Validation accuracy (bitwise): 0.7517 | Constraint violation: 0.4461\n",
+      "[Iter 500] Validation loss: 425.5396 | Validation accuracy (bitwise): 0.7345 | Constraint violation: 0.4250\n",
+      "[Iter 600] Validation loss: 105.5268 | Validation accuracy (bitwise): 0.7682 | Constraint violation: 0.1050\n",
+      "[Iter 700] Validation loss: 581.5433 | Validation accuracy (bitwise): 0.7247 | Constraint violation: 0.5810\n",
+      "[Iter 800] Validation loss: 675.5443 | Validation accuracy (bitwise): 0.7222 | Constraint violation: 0.6750\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m training_params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWEIGHT_DECAY\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-4\u001b[39m\n\u001b[1;32m      9\u001b[0m training_params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEARLY_STOPPING_PATIENCE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m---> 11\u001b[0m \u001b[43mFFNet_reg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSS_train\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtraining_params\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpenalty_weight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000.0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 240\u001b[0m, in \u001b[0;36mRegression.SS_train\u001b[0;34m(self, training_params, verbose, penalty_weight)\u001b[0m\n\u001b[1;32m    238\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m    239\u001b[0m logits \u001b[38;5;241m=\u001b[39m model(inputs)  \u001b[38;5;66;03m# shape: (B, N_obs*4*H)\u001b[39;00m\n\u001b[0;32m--> 240\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbatch_constraint_violation_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlambda_penalty\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpenalty_weight\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# + loss_fn(logits, y_true)\u001b[39;00m\n\u001b[1;32m    241\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m    242\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "Cell \u001b[0;32mIn[5], line 191\u001b[0m, in \u001b[0;36mRegression.batch_constraint_violation_loss\u001b[0;34m(self, dis_traj_pred, cont_traj_pred, lambda_penalty)\u001b[0m\n\u001b[1;32m    189\u001b[0m     dis_traj \u001b[38;5;241m=\u001b[39m NNoutput_reshape_torch(dis_traj_pred[b], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_obs)\n\u001b[1;32m    190\u001b[0m     cont_traj \u001b[38;5;241m=\u001b[39m cont_traj_pred[b]\n\u001b[0;32m--> 191\u001b[0m     total_violation \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mconstraint_violation_torch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdis_traj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcont_traj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    192\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m lambda_penalty \u001b[38;5;241m*\u001b[39m total_violation \u001b[38;5;241m/\u001b[39m batch_size\n",
+      "Cell \u001b[0;32mIn[3], line 44\u001b[0m, in \u001b[0;36mconstraint_violation_torch\u001b[0;34m(dis_traj, cont_traj)\u001b[0m\n\u001b[1;32m     42\u001b[0m cos_th \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcos(th); sin_th \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msin(th)\n\u001b[1;32m     43\u001b[0m d \u001b[38;5;241m=\u001b[39m dis_traj[o] \u001b[38;5;66;03m# (4, H)\u001b[39;00m\n\u001b[0;32m---> 44\u001b[0m c1 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrelu(cos_th \u001b[38;5;241m*\u001b[39m (x \u001b[38;5;241m-\u001b[39m xo) \u001b[38;5;241m+\u001b[39m sin_th \u001b[38;5;241m*\u001b[39m (y \u001b[38;5;241m-\u001b[39m yo) \u001b[38;5;241m-\u001b[39m L0 \u001b[38;5;241m-\u001b[39m bigM \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m))\n\u001b[1;32m     45\u001b[0m c2 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrelu(\u001b[38;5;241m-\u001b[39msin_th \u001b[38;5;241m*\u001b[39m (x \u001b[38;5;241m-\u001b[39m xo) \u001b[38;5;241m+\u001b[39m cos_th \u001b[38;5;241m*\u001b[39m (y \u001b[38;5;241m-\u001b[39m yo) \u001b[38;5;241m-\u001b[39m W0 \u001b[38;5;241m-\u001b[39m bigM \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m d[\u001b[38;5;241m1\u001b[39m, :]))\n\u001b[1;32m     46\u001b[0m c3 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrelu(\u001b[38;5;241m-\u001b[39mcos_th \u001b[38;5;241m*\u001b[39m (x \u001b[38;5;241m-\u001b[39m xo) \u001b[38;5;241m-\u001b[39m sin_th \u001b[38;5;241m*\u001b[39m (y \u001b[38;5;241m-\u001b[39m yo) \u001b[38;5;241m-\u001b[39m L0 \u001b[38;5;241m-\u001b[39m bigM \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m d[\u001b[38;5;241m2\u001b[39m, :]))\n",
+      "File \u001b[0;32m~/github/phdenv/lib/python3.10/site-packages/torch/_tensor.py:37\u001b[0m, in \u001b[0;36m_handle_torch_function_and_wrap_type_error_to_not_implemented.<locals>.wrapped\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(f, assigned\u001b[38;5;241m=\u001b[39massigned)\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     36\u001b[0m         \u001b[38;5;66;03m# See https://github.com/pytorch/pytorch/issues/75462\u001b[39;00m\n\u001b[0;32m---> 37\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mhas_torch_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     38\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(wrapped, args, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m     39\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -615,7 +665,7 @@
     "training_params['WEIGHT_DECAY'] = 1e-4\n",
     "training_params['EARLY_STOPPING_PATIENCE'] = 10\n",
     "\n",
-    "FFNet_reg.SS_train(training_params, verbose=True, penalty_weight=10.0)\n"
+    "FFNet_reg.SS_train(training_params, verbose=True, penalty_weight=1000.0)\n"
    ]
   },
   {
