--- a/examples/Part7_MIQP_qplayer.ipynb
+++ b/examples/Part7_MIQP_qplayer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,83 +368,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GUROBI Solution x: tensor([[14.0326, -0.0000],\n",
-      "        [ 0.0000,  6.8042],\n",
-      "        [ 0.0000, 12.2670],\n",
-      "        [-0.9189, -1.0631],\n",
-      "        [ 9.5111,  0.0000],\n",
-      "        [12.2572,  0.0000],\n",
-      "        [10.9768,  0.0000],\n",
-      "        [ 8.9776,  0.0000],\n",
-      "        [13.1954,  0.0000],\n",
-      "        [12.9868,  0.0000],\n",
-      "        [ 8.6832,  0.0000],\n",
-      "        [-1.9766,  8.8804],\n",
-      "        [ 0.0000,  5.8270],\n",
-      "        [ 0.0000,  7.0949],\n",
-      "        [ 0.0000,  8.7406],\n",
-      "        [ 8.4286, -1.2724],\n",
-      "        [ 4.7151,  0.0000],\n",
-      "        [ 0.5310, -1.9375],\n",
-      "        [-0.4964, -1.3034],\n",
-      "        [ 5.9783, -1.0742],\n",
-      "        [ 0.0000,  6.2465],\n",
-      "        [ 3.6084, -2.3709],\n",
-      "        [ 8.9081, -1.9061],\n",
-      "        [ 0.0000,  1.4048],\n",
-      "        [ 3.4197, -2.2522],\n",
-      "        [ 8.0320,  0.0000],\n",
-      "        [ 0.0000, 12.4330],\n",
-      "        [ 4.5204, -0.0000],\n",
-      "        [ 0.0000,  3.7237],\n",
-      "        [ 0.0000, 11.0178],\n",
-      "        [ 0.0000,  4.2538],\n",
-      "        [ 7.2182,  0.0000]])\n",
-      "Objective values: tensor([-240.4365, -187.8300, -150.4839,   -1.9747, -269.3962, -128.7156,\n",
-      "        -178.8960,  -60.7449, -210.4915, -155.2142, -157.1555,  -82.7680,\n",
-      "        -168.6714,  -53.5372,  -76.7291,  -86.1792,  -36.7581,   -3.9654,\n",
-      "          -1.9451, -112.9889,  -53.7254,  -15.3868,  -63.1500,   -2.4512,\n",
-      "         -13.8430, -105.4842, -187.3466,  -28.5204,  -14.0290, -160.9198,\n",
-      "         -24.2288,  -40.0715], grad_fn=<AddBackward0>)\n",
-      "Slack: tensor([[ 7.0163e+00,  5.9384e-07],\n",
-      "        [ 4.2716e+00,  1.9100e-06],\n",
-      "        [ 3.7124e-02,  7.1056e-06],\n",
-      "        [ 3.4266e-07,  3.7928e-07],\n",
-      "        [ 5.4974e+00,  2.0106e-05],\n",
-      "        [ 6.5425e+00,  1.4368e-06],\n",
-      "        [ 5.4884e+00,  2.8801e-06],\n",
-      "        [ 4.4888e+00,  8.6755e-06],\n",
-      "        [ 6.5941e+00,  1.9870e-07],\n",
-      "        [ 6.4935e+00,  3.7801e-05],\n",
-      "        [ 5.8887e+00,  1.9128e-06],\n",
-      "        [ 1.1961e-06,  9.9241e-08],\n",
-      "        [ 4.2787e+00, -4.6261e-06],\n",
-      "        [ 1.0327e+00,  1.2334e-07],\n",
-      "        [ 3.3256e-01,  1.0682e-06],\n",
-      "        [ 5.3091e+00, -2.0945e-05],\n",
-      "        [ 2.3576e+00,  5.7975e-06],\n",
-      "        [ 2.6549e-01, -9.8545e-07],\n",
-      "        [ 8.5661e-07,  1.9541e-06],\n",
-      "        [ 5.9783e+00,  6.2560e-09],\n",
-      "        [ 2.2141e+00,  7.5557e-07],\n",
-      "        [ 1.8042e+00,  1.9715e-06],\n",
-      "        [ 4.4541e+00,  8.4793e-07],\n",
-      "        [ 3.9911e-01,  2.0896e-06],\n",
-      "        [ 1.7098e+00, -1.7907e-07],\n",
-      "        [ 4.0160e+00,  6.6320e-06],\n",
-      "        [ 3.0147e+00,  3.2099e-06],\n",
-      "        [ 2.2602e+00, -1.0436e-07],\n",
-      "        [ 2.3294e-01,  1.4132e-06],\n",
-      "        [ 3.6298e+00,  5.5195e-05],\n",
-      "        [ 1.4295e+00,  5.9416e-05],\n",
-      "        [ 3.6228e+00,  3.2391e-06]], grad_fn=<_CvxpyLayerFnFnBackward>)\n"
+      "GUROBI Solution x: tensor([[ 0.0000,  6.3237],\n",
+      "        [ 0.0000,  9.3261],\n",
+      "        [ 7.6255,  0.0000],\n",
+      "        [ 8.2406,  0.0000],\n",
+      "        [12.9668,  0.0000],\n",
+      "        [-0.5264,  7.2999],\n",
+      "        [ 0.0000,  3.5765],\n",
+      "        [ 0.0000, 10.6713],\n",
+      "        [-0.7171,  2.8125],\n",
+      "        [ 0.0000, 12.3366],\n",
+      "        [ 0.0000,  2.2791],\n",
+      "        [ 0.0000, 13.7926],\n",
+      "        [ 1.0348, -1.3910],\n",
+      "        [ 7.4443,  0.0000],\n",
+      "        [-1.2363, 13.5557],\n",
+      "        [14.0070,  0.0000],\n",
+      "        [10.1621,  0.0000],\n",
+      "        [11.3381, -0.0000],\n",
+      "        [ 0.0000, 14.5597],\n",
+      "        [ 7.8433,  0.0000],\n",
+      "        [-1.0034, 10.0345],\n",
+      "        [11.1660,  0.0000],\n",
+      "        [ 0.0000,  7.0552],\n",
+      "        [ 0.0000, 14.4076],\n",
+      "        [ 8.5491,  0.0000],\n",
+      "        [10.4175,  0.0000],\n",
+      "        [ 0.0000, 10.3651],\n",
+      "        [ 0.0000,  5.9981],\n",
+      "        [ 0.0000,  7.3898],\n",
+      "        [-0.3298, 11.9919],\n",
+      "        [11.8279, -1.0573],\n",
+      "        [ 0.0000,  5.0073]])\n",
+      "Objective values: tensor([ -39.9994, -163.5140,  -81.7458,  -83.2540, -232.1723,  -53.5663,\n",
+      "         -16.2813, -132.2191,   -8.4244, -158.4456,   -8.4673, -255.0228,\n",
+      "          -3.0056,  -69.9538, -185.2867, -349.9613, -133.0049, -136.7258,\n",
+      "        -289.5831, -115.5028, -101.6984, -261.3124,  -63.9531, -272.4661,\n",
+      "        -204.6998, -197.6575, -147.4007,  -37.0756, -211.2207, -143.9133,\n",
+      "        -141.5289,  -28.3520], grad_fn=<AddBackward0>)\n",
+      "Slack: tensor([[ 1.7266e-07,  1.7900e-06],\n",
+      "        [ 8.0397e-07,  1.1430e-06],\n",
+      "        [ 7.3430e-09, -9.2101e-08],\n",
+      "        [ 3.0470e-05,  1.8353e-05],\n",
+      "        [ 4.7836e-06,  1.6431e-06],\n",
+      "        [ 2.1299e-07, -6.7127e-08],\n",
+      "        [ 1.5024e-05,  3.2932e-05],\n",
+      "        [ 1.4029e-05,  2.5623e-05],\n",
+      "        [ 5.7832e-07,  6.3256e-04],\n",
+      "        [ 9.2803e-06,  4.7394e-06],\n",
+      "        [ 1.0525e-04,  1.2375e-04],\n",
+      "        [ 1.6911e-06,  1.7741e-06],\n",
+      "        [-1.0965e-05, -8.4428e-06],\n",
+      "        [ 3.9005e-08,  5.8385e-07],\n",
+      "        [ 4.3741e-06,  1.8826e-06],\n",
+      "        [ 5.2131e-07,  3.8982e-07],\n",
+      "        [-1.0099e-07, -5.6404e-07],\n",
+      "        [ 1.1411e-06,  1.6506e+00],\n",
+      "        [ 2.1020e-07,  1.5167e-07],\n",
+      "        [ 1.5070e-06,  1.4739e-06],\n",
+      "        [ 4.0161e-08,  1.1001e-05],\n",
+      "        [ 3.0514e-06,  2.1400e-06],\n",
+      "        [ 1.8412e-06,  4.0417e-06],\n",
+      "        [ 9.7050e-07,  1.8117e-05],\n",
+      "        [ 3.5012e-05,  3.0110e+00],\n",
+      "        [ 1.8065e-06,  1.8481e-06],\n",
+      "        [ 1.6702e-06,  4.9531e-06],\n",
+      "        [ 1.4080e-04,  2.7321e-05],\n",
+      "        [ 8.2353e-06, -1.7133e-05],\n",
+      "        [ 1.0771e-06,  9.1537e-07],\n",
+      "        [ 1.0127e-05,  1.8959e-05],\n",
+      "        [ 1.8077e-06,  1.2129e-06]], grad_fn=<_CvxpyLayerFnFnBackward>)\n"
      ]
     }
    ],
@@ -496,13 +496,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -511,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +513,7 @@
        "CvxpyLayer()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,8 +572,7 @@
     "        a_batch = batch['a'].to(device).float()        # (B,1)\n",
     "        B = p_batch.shape[0]\n",
     "        # M_batch = torch.ones(B, nx, ny) * 1e3  # Big-M matrix\n",
-    "        \n",
-    "\n",
+    "    \n",
     "        # ---- Predict y from [p,b,a] ----\n",
     "        if use_node:\n",
     "            # If you're using Neuromancer's Node API you already have:\n",
@@ -921,27 +913,6 @@
     "# for i in range(len(test_objs_nm)):\n",
     "#     print(f\"Test sample {i}: CVXPY_LAYER Obj = {test_objs_nm[i]:.4f}, Gurobi Obj = {test_objs_grb[i]:.4f}, Gap = {test_objs_nm[i] - test_objs_grb[i]:.4f}\")\n",
     "print(f\"Proportion of close solutions: {np.mean(np.abs(np.array(test_objs_nm) - np.array(test_objs_grb)) < 1e-3):.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pirnt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpirnt\u001b[49m\n",
-      "\u001b[31mNameError\u001b[39m: name 'pirnt' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "pirnt"
    ]
   },
   {
@@ -1585,7 +1556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "slack_feasi_test",
+   "display_name": "penn_env312",
    "language": "python",
    "name": "python3"
   },
