make a class for model using incorporated QP layer, and a simple example to test it

--- a/examples/correction_qp_layer.ipynb
+++ b/examples/correction_qp_layer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "758d92cf",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4d91a7a1",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0df93e08",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0bfcc7ff",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d3f563e5",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6778c812",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "82fa707b",
    "metadata": {},
    "outputs": [],
@@ -467,14 +467,13 @@
     "        device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "        \n",
     "    nn_model.to(device)\n",
-    "    nn_model.train()\n",
     "    cvx_layer.to(device)\n",
     "    sl_model.to(device)\n",
     "    sl_model.eval()\n",
     "\n",
     "    # Define weights for loss components\n",
     "    weights = torch.tensor(loss_weights, device=device)\n",
-    "    weights = weights / weights.sum()\n",
+    "    weights = 1e1*weights / weights.sum() # may scale up the weights a bit\n",
     "    global_step = 0\n",
     "    optimizer = torch.optim.Adam(nn_model.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
     "    scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=int(PATIENCE/2))\n",
@@ -564,7 +563,7 @@
     "            # ---- Backprop ----\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
-    "            torch.nn.utils.clip_grad_norm_(nn_model.parameters(), max_norm=1e1)\n",
+    "            # torch.nn.utils.clip_grad_norm_(nn_model.parameters(), max_norm=1e1)\n",
     "            optimizer.step()         \n",
     "            global_step += 1\n",
     "\n",
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "a5c28b73",
    "metadata": {},
    "outputs": [
@@ -655,33 +654,37 @@
       "Validation for the supervised learning model: \n",
       "supervised learning model: obj_val = -97.7022, slack_pen = 0.0000, y_sum_penalty = 0.0030, supervised_loss = 0.0088, \n",
       "__________________________________________________\n",
-      "[epoch 1 | step 1] validation: loss = 0.0236, obj_val = -63.3737, slack_pen = 0.0000, y_sum_penalty = 0.0020, supervised_loss = 0.2630, \n",
-      "[epoch 1 | step 20] validation: loss = 0.0230, obj_val = -21.0139, slack_pen = -0.0000, y_sum_penalty = 0.0030, supervised_loss = 0.2455, \n",
-      "[epoch 1 | step 40] validation: loss = 0.0105, obj_val = -63.2487, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.1265, \n",
-      "[epoch 1 | step 60] validation: loss = 0.0103, obj_val = -89.4927, slack_pen = 0.0000, y_sum_penalty = 0.0060, supervised_loss = 0.0640, \n",
-      "[epoch 1 | step 80] validation: loss = 0.0044, obj_val = -91.4979, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0430, \n",
-      "[epoch 1 | step 100] validation: loss = 0.0027, obj_val = -92.1142, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0323, \n",
-      "[epoch 2 | step 120] validation: loss = 0.0035, obj_val = -92.2693, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0320, \n",
-      "[epoch 2 | step 140] validation: loss = 0.0045, obj_val = -94.2973, slack_pen = 0.0000, y_sum_penalty = 0.0030, supervised_loss = 0.0243, \n",
-      "[epoch 2 | step 160] validation: loss = 0.0036, obj_val = -94.8423, slack_pen = 0.0000, y_sum_penalty = 0.0020, supervised_loss = 0.0235, \n",
-      "[epoch 2 | step 180] validation: loss = 0.0033, obj_val = -95.2975, slack_pen = 0.0000, y_sum_penalty = 0.0020, supervised_loss = 0.0200, \n",
-      "[epoch 2 | step 200] validation: loss = 0.0022, obj_val = -92.0721, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0260, \n",
-      "[epoch 3 | step 220] validation: loss = 0.0029, obj_val = -87.2275, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0343, \n",
-      "[epoch 3 | step 240] validation: loss = 0.0018, obj_val = -93.4882, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0210, \n",
-      "[epoch 3 | step 260] validation: loss = 0.0030, obj_val = -95.5864, slack_pen = 0.0000, y_sum_penalty = 0.0020, supervised_loss = 0.0158, \n",
-      "[epoch 3 | step 280] validation: loss = 0.0015, obj_val = -94.6052, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0185, \n",
-      "[epoch 3 | step 300] validation: loss = 0.0019, obj_val = -92.6789, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0223, \n",
-      "[epoch 4 | step 320] validation: loss = 0.0036, obj_val = -97.0520, slack_pen = 0.0000, y_sum_penalty = 0.0030, supervised_loss = 0.0130, \n",
-      "[epoch 4 | step 340] validation: loss = 0.0019, obj_val = -96.4805, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0130, \n",
-      "[epoch 4 | step 360] validation: loss = 0.0012, obj_val = -95.1957, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0143, \n",
-      "[epoch 4 | step 380] validation: loss = 0.0010, obj_val = -96.4925, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0125, \n",
-      "[epoch 4 | step 400] validation: loss = 0.0012, obj_val = -95.4157, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0140, \n",
-      "[epoch 5 | step 420] validation: loss = 0.0011, obj_val = -95.8739, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0130, \n",
-      "[epoch 5 | step 440] validation: loss = 0.0014, obj_val = -93.3896, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0168, \n",
-      "[epoch 5 | step 460] validation: loss = 0.0012, obj_val = -95.0237, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0140, \n",
-      "[epoch 5 | step 480] validation: loss = 0.0012, obj_val = -95.3689, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0145, \n",
-      "[epoch 5 | step 500] validation: loss = 0.0011, obj_val = -95.4991, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0137, \n",
-      "Learning rate updated: 0.000100 -> 0.000050\n"
+      "[epoch 1 | step 1] validation: loss = 1.0366, obj_val = -106.7167, slack_pen = 0.0000, y_sum_penalty = 0.1110, supervised_loss = 0.0312, \n",
+      "[epoch 1 | step 20] validation: loss = 0.0318, obj_val = -86.5325, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0350, \n",
+      "[epoch 1 | step 40] validation: loss = 0.0272, obj_val = -89.5896, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0300, \n",
+      "[epoch 1 | step 60] validation: loss = 0.0359, obj_val = -98.1479, slack_pen = 0.0000, y_sum_penalty = 0.0030, supervised_loss = 0.0095, \n",
+      "[epoch 1 | step 80] validation: loss = 0.0100, obj_val = -95.9437, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0110, \n",
+      "[epoch 1 | step 100] validation: loss = 0.0084, obj_val = -97.4817, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0093, \n",
+      "[epoch 2 | step 120] validation: loss = 0.0089, obj_val = -97.3941, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0098, \n",
+      "[epoch 2 | step 140] validation: loss = 0.0107, obj_val = -95.7601, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0118, \n",
+      "[epoch 2 | step 160] validation: loss = 0.0120, obj_val = -95.2297, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0133, \n",
+      "[epoch 2 | step 180] validation: loss = 0.0082, obj_val = -97.4240, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0090, \n",
+      "[epoch 2 | step 200] validation: loss = 0.0084, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0093, \n",
+      "[epoch 3 | step 220] validation: loss = 0.0093, obj_val = -96.6884, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0103, \n",
+      "Learning rate updated: 0.000100 -> 0.000050\n",
+      "[epoch 3 | step 240] validation: loss = 0.0093, obj_val = -96.9007, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0103, \n",
+      "[epoch 3 | step 260] validation: loss = 0.0084, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0093, \n",
+      "[epoch 3 | step 280] validation: loss = 0.0089, obj_val = -97.2532, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0098, \n",
+      "[epoch 3 | step 300] validation: loss = 0.0084, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0093, \n",
+      "[epoch 4 | step 320] validation: loss = 0.0093, obj_val = -96.7757, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0103, \n",
+      "[epoch 4 | step 340] validation: loss = 0.0079, obj_val = -97.3621, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0088, \n",
+      "[epoch 4 | step 360] validation: loss = 0.0182, obj_val = -97.2450, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0100, \n",
+      "[epoch 4 | step 380] validation: loss = 0.0084, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0093, \n",
+      "[epoch 4 | step 400] validation: loss = 0.0082, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0090, \n",
+      "[epoch 5 | step 420] validation: loss = 0.0098, obj_val = -97.0303, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0108, \n",
+      "[epoch 5 | step 440] validation: loss = 0.0086, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0095, \n",
+      "[epoch 5 | step 460] validation: loss = 0.0079, obj_val = -97.5246, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0088, \n",
+      "Learning rate updated: 0.000050 -> 0.000025\n",
+      "[epoch 5 | step 480] validation: loss = 0.0079, obj_val = -97.3620, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0088, \n",
+      "[epoch 5 | step 500] validation: loss = 0.0095, obj_val = -96.7007, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0105, \n",
+      "[epoch 6 | step 520] validation: loss = 0.0086, obj_val = -97.1510, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0095, \n",
+      "[epoch 6 | step 540] validation: loss = 0.0082, obj_val = -97.5246, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0090, \n",
+      "Early stopping triggered!\n"
      ]
     }
    ],
@@ -699,17 +702,17 @@
     "\n",
     "# Then refine with with self-supervised learning\n",
     "training_params = {}\n",
-    "training_params['TRAINING_EPOCHS'] = int(5)\n",
+    "training_params['TRAINING_EPOCHS'] = int(10)\n",
     "training_params['CHECKPOINT_AFTER'] = int(20)\n",
     "training_params['LEARNING_RATE'] = 1e-4\n",
     "training_params['WEIGHT_DECAY'] = 1e-5\n",
     "training_params['PATIENCE'] = 10\n",
     "\n",
     "slack_weight = 1e3\n",
-    "constraint_weight = 1e4\n",
-    "supervised_weight = 1e3\n",
+    "constraint_weight = 1e6\n",
+    "supervised_weight = 1e5\n",
     "cvx_layer = QP_Layer(nx=nx, ny=ny, penalty=\"l1\", rho1=slack_weight)\n",
-    "loss_weights = [0.0, slack_weight, constraint_weight, supervised_weight]\n",
+    "loss_weights = [0e0, slack_weight, constraint_weight, supervised_weight]\n",
     "train_SSL(SSL_model, cvx_layer, SL_model, train_loader, test_loader, training_params, loss_weights,\n",
     "    device = device)    "
    ]
