--- a/self_supervised/train_model_SSL.ipynb
+++ b/self_supervised/train_model_SSL.ipynb
@@ -505,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SSLMIQP_main",
+   "display_name": "penn_env312",
    "language": "python",
    "name": "python3"
   },
